--- a/src/resources/scss/main.scss
+++ b/src/resources/scss/main.scss
@@ -49,26 +49,106 @@ html {
     }
 }
 .site-main {
-    background: blue;
-    > .product-summary {
-        background: gray;
-        width: 200px;
-        height: 400px;
-        display: block;
-        > .product-image {
-            background: plum;
-            height: 300px;
-            margin: 20px;
+    > .products {
+        background: blue;
+        > ul {
+            list-style: none;
             text-align: center;
-            display: block;
+            > li {
+                margin: 0px 20px;
+                display: inline-block;
+                > .product-summary {
+                    margin: 0;
+                    display: flex;
+                    flex-direction: column;
+                    background: gray;
+                    min-width: 300px;
+                    width: 200px;
+                    height: 400px;
+                    > .product-image {
+                        background: rebeccapurple;
+                        margin-left: auto;
+                        margin-right: auto;
+                        margin-top: 10px;
+                        width: 180px;
+                        height: 300px;
+                        position: relative;
+                        > img {
+                            max-height: 100%;
+                            max-width: 100%;
+                            width: auto;
+                            height: auto;
+                            position: absolute;
+                            top: 0;
+                            bottom: 0;
+                            left: 0;
+                            right: 0;
+                            margin: auto;
+                        }
+                    }
+                    > h5 {
+                        margin-bottom: 10px;
+                    }
+                    > span {
+                        margin-bottom: 10px;
+                    }
+                }
+            }
         }
-        > h5 {
-            position: absolute;
-            display: block;
-        }
-        > span {
+    }
+    > .product-details {
+        background: paleturquoise;
+        height: 400px;
+        > .product-image {
+            float: left;
+            background: rebeccapurple;
+            margin-left: 10px;
+            margin-right: 20px;
+            width: 200px;
+            height: 400px;
             position: relative;
-            display: block;
+            > img {
+                max-height: 100%;
+                max-width: 100%;
+                width: auto;
+                height: auto;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                margin: auto;
+            }
+        }
+        > .product-parameters {
+            float: left;
+            max-width: 400px;
+            > .product-description {
+                background: yellow;
+                > p {
+                    display: inline;
+                    word-break: break-all;
+                }
+            }
+            > .product-size {
+                display: block;
+            }
+            > .product-count {
+                display: block;
+            }
+        }
+        > .add-to-cart {
+            float: right;
+            background: rebeccapurple;
+            margin-left: 20px;
+            margin-right: 10px;
+            width: 150px;
+            height: 400px;
+            position: relative;
+            > button {
+                display: block;
+                margin-top: auto;
+            }
         }
     }
 }
